style1.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
}
.topbackground{
      background-color: #1f2937;
    color: #f9faf8;
    width: 100vw;
    height: 22vh;
}

.site-header {
    display: flex;
    flex-wrap: wrap;
    height: 20px;
    gap: 15px;
    margin-left: 80px;
}
.hero {
  
    display: flex;
    align-self: space-between;
    flex-wrap: wrap;
    gap: 100px;
    padding-left:350px;
}

.button{
    background:#3882f6;
    color: white;
    border-color:white;
    max-height: 30px;
}
.top-button{
    border-color:#3882f6;
    border-radius: 3px;
    padding-left: 15px;
    padding-right: 15px;
}
.text {
    max-width: 500px;
    display: flex;
    flex-wrap: wrap;
}
.information {
margin: 0px;
    height: 39vh;
}

.achieve {
    align-self: center;
    text-align: center;
    font-weight: 300;
    font-size: larger;
}

.row-container {
    display: flex;
    flex-wrap: wrap;
    align-self: center;
    justify-content: center;
    max-width: 1050px;
    column-gap: 100px;
    row-gap: 15px;
}

.words {
    border-radius: 15px;
    padding-left:5px;
    padding-right: 5px;
    padding-top: 0px;
    width: 137px;
    height: 125px;
font-size:large;
}

ul {
    display: flex;
     gap:15px;
    margin-left: 70%;
}
li {
    list-style-type: none;
    color: #f9faf8;
   
}
a {
display: flex;
    text-decoration: none;
}

.fullbackground{
    background-color: #e5e7eb;
    height: 15vh;
    width: 100%;
}
.quote {text-align: center;
   padding-top:20px;
} 
.action {
display:flex;
margin-top: 18px;
margin-bottom: 18px;
padding-left: 75px;
padding-right: 250px;
padding-bottom: 15px;
color:#f9faf8; 
    background-color: #3882f6;
}

.text-left {
    align-self: center;
padding-right: 275px;
flex-wrap: nowrap;
}

.button-right {align-self: center;
    padding-left: 25px;
    padding-right: 25px;
    margin-top: 15px;
    border-radius: 3px;
}

footer {
display: flex;
justify-content: center;
align-self: stretch;
flex:auto;
color: white;
    background-color: #1f2937;
}

